--- a/.editorconfig
+++ b/.editorconfig
@@ -1,6 +1,5 @@
 root = true
 
-
 [*]
 indent_style = space
 indent_size = 4
@@ -8,5 +7,19 @@ charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = false
 
-[*.{yml,yaml}]
+[*.{config,fsproj,json,yml,yaml}]
 indent_size = 2
+
+[*.{fs,fsx}]
+max_line_length = 210
+fsharp_multiline_bracket_style = stroustrup
+fsharp_multi_line_lambda_closing_newline = true
+fsharp_max_infix_operator_expression = 120
+fsharp_max_dot_get_expression_width = 120
+fsharp_bar_before_discriminated_union_declaration = false
+fsharp_keep_max_number_of_blank_lines = 1
+fsharp_record_multiline_formatter = number_of_items
+fsharp_max_record_number_of_items = 2
+fsharp_array_or_list_multiline_formatter = number_of_items
+fsharp_max_array_or_list_number_of_items = 3
+fsharp_newline_between_type_definition_and_members = false
