--- a/package.json
+++ b/package.json
@@ -8,16 +8,15 @@
         "build": "dotnet fable ./src/Shopfoo.Client --outDir ./src/Shopfoo.Client/.fable-build --run vite build"
     },
     "devDependencies": {
+        "@tailwindcss/vite": "^4.0.11",
         "@vitejs/plugin-react": "^4.3.4",
-        "@tailwindcss/vite":"^4.0.11",
         "vite": "^6.2.1"
     },
     "dependencies": {
+        "daisyui": "^5.0.0",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
-        "use-sync-external-store":"^1.4.0",
-        "tailwindcss":"^4.0.11",
-        "daisyui": "^5.0.0"
+        "tailwindcss": "^4.0.11",
+        "use-sync-external-store": "^1.4.0"
     }
-
 }
