--- a/src/Shopfoo.Client/Shopfoo.Client.fsproj
+++ b/src/Shopfoo.Client/Shopfoo.Client.fsproj
@@ -10,6 +10,7 @@
         <Compile Include="Pages\Index.fs" />
         <Compile Include="View.fs" />
         <Compile Include="App.fs" />
+        <Content Include="index.html" />
     </ItemGroup>
     <ItemGroup>
         <ProjectReference Include="..\Shopfoo.Shared\Shopfoo.Shared.fsproj" />
