chore: 🏗️ setup Core (Common, Domain.Types) and UI (Remoting, Translations, DependencyInjection)

--- a/Build.fsproj
+++ b/Build.fsproj
@@ -4,6 +4,7 @@
     <TargetFramework>net9.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <Content Include="paket.references" />
     <Compile Include="BuildHelpers.fs" />
     <Compile Include="BuildTools.fs" />
     <Compile Include="Build.fs" />
