--- a/src/Shopfoo.Client/Shopfoo.Client.fsproj
+++ b/src/Shopfoo.Client/Shopfoo.Client.fsproj
@@ -4,7 +4,9 @@
         <TargetFramework>net9.0</TargetFramework>
     </PropertyGroup>
     <ItemGroup>
+        <Content Include="paket.references" />
         <Compile Include="Server.fs" />
+        <Compile Include="Remoting.fs" />
         <Compile Include="Router.fs" />
         <Compile Include="Extensions.fs" />
         <Compile Include="Pages\About.fs" />
