--- a/src/Shopfoo.Domain.Types/Shopfoo.Domain.Types.fsproj
+++ b/src/Shopfoo.Domain.Types/Shopfoo.Domain.Types.fsproj
@@ -2,15 +2,16 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Common.fs" />
+    <Compile Include="Errors.fs" />
+    <Compile Include="Security.fs" />
     <Compile Include="Translations.fs" />
-    <Compile Include="Remoting.fs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Shopfoo.Common\Shopfoo.Common.fsproj" />
-    <ProjectReference Include="..\Shopfoo.Domain.Types\Shopfoo.Domain.Types.fsproj" />
   </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
