--- a/src/Shopfoo.Server/Shopfoo.Server.fsproj
+++ b/src/Shopfoo.Server/Shopfoo.Server.fsproj
@@ -5,11 +5,20 @@
     <TargetFramework>net9.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Remoting.fs" />
+    <Content Include="paket.references" />
+    <Compile Include="Remoting\FeatApi.fs" />
+    <Compile Include="Remoting\Security.fs" />
+    <Compile Include="Remoting\Home\IndexHandler.fs" />
+    <Compile Include="Remoting\Home\HomeApiBuilder.fs" />
+    <Compile Include="Remoting\Product\IndexHandler.fs" />
+    <Compile Include="Remoting\Product\HomeApiBuilder.fs" />
+    <Compile Include="Remoting\RootApiBuilder.fs" />
     <Compile Include="WebApp.fs" />
+    <Compile Include="DependencyInjection.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Shopfoo.Domain.Types\Shopfoo.Domain.Types.fsproj" />
     <ProjectReference Include="..\Shopfoo.Shared\Shopfoo.Shared.fsproj" />
   </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
