--- a/src/Shopfoo.Domain.Types/Shopfoo.Domain.Types.fsproj
+++ b/src/Shopfoo.Domain.Types/Shopfoo.Domain.Types.fsproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <Compile Include="Common.fs" />
     <Compile Include="Errors.fs" />
+    <Compile Include="Products.fs" />
     <Compile Include="Security.fs" />
     <Compile Include="Translations.fs" />
   </ItemGroup>
