--- a/src/Shopfoo.Server/Shopfoo.Server.fsproj
+++ b/src/Shopfoo.Server/Shopfoo.Server.fsproj
@@ -13,7 +13,7 @@
     <Compile Include="Remoting\Home\IndexHandler.fs" />
     <Compile Include="Remoting\Home\HomeApiBuilder.fs" />
     <Compile Include="Remoting\Product\IndexHandler.fs" />
-    <Compile Include="Remoting\Product\HomeApiBuilder.fs" />
+    <Compile Include="Remoting\Product\ProductApiBuilder.fs" />
     <Compile Include="Remoting\RootApiBuilder.fs" />
     <Compile Include="WebApp.fs" />
     <Compile Include="DependencyInjection.fs" />
