--- a/src/Shopfoo.Server/Shopfoo.Server.fsproj
+++ b/src/Shopfoo.Server/Shopfoo.Server.fsproj
@@ -12,7 +12,8 @@
     <Compile Include="Remoting\Security.fs" />
     <Compile Include="Remoting\Home\IndexHandler.fs" />
     <Compile Include="Remoting\Home\HomeApiBuilder.fs" />
-    <Compile Include="Remoting\Product\IndexHandler.fs" />
+    <Compile Include="Remoting\Product\GetProductsHandler.fs" />
+    <Compile Include="Remoting\Product\GetProductDetailsHandler.fs" />
     <Compile Include="Remoting\Product\ProductApiBuilder.fs" />
     <Compile Include="Remoting\RootApiBuilder.fs" />
     <Compile Include="WebApp.fs" />
