fix: 🐛 add missing React keys, fix change lang
- React.useState does not work as expected for the ReactState
- Store the FullContext in the root Model
- Pass functions to update it (fill translations, login) down to page views

--- a/src/Shopfoo.Server/Shopfoo.Server.fsproj
+++ b/src/Shopfoo.Server/Shopfoo.Server.fsproj
@@ -11,6 +11,7 @@
     <Compile Include="Remoting\FeatApi.fs" />
     <Compile Include="Remoting\Security.fs" />
     <Compile Include="Remoting\Home\IndexHandler.fs" />
+    <Compile Include="Remoting\Home\GetTranslationsHandler.fs" />
     <Compile Include="Remoting\Home\HomeApiBuilder.fs" />
     <Compile Include="Remoting\Product\GetProductsHandler.fs" />
     <Compile Include="Remoting\Product\GetProductDetailsHandler.fs" />
