refactor: ♻️ rename Shared.Common to Errors, w/o AutoOpen

--- a/src/Shopfoo.Shared/Shopfoo.Shared.fsproj
+++ b/src/Shopfoo.Shared/Shopfoo.Shared.fsproj
@@ -4,7 +4,7 @@
     <TargetFramework>net9.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Common.fs" />
+    <Compile Include="Errors.fs" />
     <Compile Include="Translations.fs" />
     <Compile Include="Remoting.fs" />
   </ItemGroup>
