--- a/src/Shopfoo.Client/Shopfoo.Client.fsproj
+++ b/src/Shopfoo.Client/Shopfoo.Client.fsproj
@@ -12,6 +12,7 @@
         <Compile Include="Components\Lang.fs" />
         <Compile Include="Components\Theme.fs" />
         <Compile Include="Components\User.fs" />
+        <Compile Include="Components\TimedToast.fs" />
         <Compile Include="Pages\About.fs" />
         <Compile Include="Pages\Login.fs" />
         <Compile Include="Pages\Product\Index.fs" />
