feat: 🖼️ add Alert.apiError to display details for Admins

--- a/src/Shopfoo.Client/Shopfoo.Client.fsproj
+++ b/src/Shopfoo.Client/Shopfoo.Client.fsproj
@@ -9,6 +9,7 @@
         <Compile Include="Remoting.fs" />
         <Compile Include="Routing.fs" />
         <Compile Include="UI.fs" />
+        <Compile Include="Components\Alert.fs" />
         <Compile Include="Components\Lang.fs" />
         <Compile Include="Components\Theme.fs" />
         <Compile Include="Components\User.fs" />
