feat: 🖼️ replace page title with the breadcrumb inside the app-navbar

--- a/src/Shopfoo.Client/Shopfoo.Client.fsproj
+++ b/src/Shopfoo.Client/Shopfoo.Client.fsproj
@@ -10,6 +10,7 @@
         <Compile Include="Routing.fs" />
         <Compile Include="UI.fs" />
         <Compile Include="Components\Alert.fs" />
+        <Compile Include="Components\AppNav.fs" />
         <Compile Include="Components\Lang.fs" />
         <Compile Include="Components\Theme.fs" />
         <Compile Include="Components\User.fs" />
