--- a/src/Shopfoo.Client/Shopfoo.Client.fsproj
+++ b/src/Shopfoo.Client/Shopfoo.Client.fsproj
@@ -18,6 +18,7 @@
         <Compile Include="Pages\About.fs" />
         <Compile Include="Pages\Login.fs" />
         <Compile Include="Pages\Product\Index.fs" />
+        <Compile Include="Pages\Product\CatalogInfo.fs" />
         <Compile Include="Pages\Product\Details.fs" />
         <Compile Include="View.fs" />
         <Compile Include="App.fs" />
