feat: ✨ save product

--- a/src/Shopfoo.Common/Shopfoo.Common.fsproj
+++ b/src/Shopfoo.Common/Shopfoo.Common.fsproj
@@ -5,6 +5,7 @@
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Common.fs" />
     <Compile Include="Option.fs" />
     <Compile Include="Seq.fs" />
     <Compile Include="String.fs" />
