--- a/src/Shopfoo.Server/Shopfoo.Server.fsproj
+++ b/src/Shopfoo.Server/Shopfoo.Server.fsproj
@@ -15,6 +15,7 @@
     <Compile Include="Remoting\Home\HomeApiBuilder.fs" />
     <Compile Include="Remoting\Product\GetProductsHandler.fs" />
     <Compile Include="Remoting\Product\GetProductDetailsHandler.fs" />
+    <Compile Include="Remoting\Product\SaveProductHandler.fs" />
     <Compile Include="Remoting\Product\ProductApiBuilder.fs" />
     <Compile Include="Remoting\RootApiBuilder.fs" />
     <Compile Include="WebApp.fs" />
