--- a/src/Shopfoo.Server/Shopfoo.Server.fsproj
+++ b/src/Shopfoo.Server/Shopfoo.Server.fsproj
@@ -6,7 +6,6 @@
   </PropertyGroup>
   <ItemGroup>
     <Content Include="paket.references" />
-    <Compile Include="Feat\Home.fs" />
     <Compile Include="Remoting\FeatApi.fs" />
     <Compile Include="Remoting\Security.fs" />
     <Compile Include="Remoting\Home\IndexHandler.fs" />
@@ -24,6 +23,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Shopfoo.Catalog\Shopfoo.Catalog.fsproj" />
     <ProjectReference Include="..\Shopfoo.Domain.Types\Shopfoo.Domain.Types.fsproj" />
+    <ProjectReference Include="..\Shopfoo.Home\Shopfoo.Home.fsproj" />
     <ProjectReference Include="..\Shopfoo.Shared\Shopfoo.Shared.fsproj" />
   </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
