--- a/src/Shopfoo.Client/Shopfoo.Client.fsproj
+++ b/src/Shopfoo.Client/Shopfoo.Client.fsproj
@@ -17,6 +17,7 @@
         <Compile Include="Components\Toast.fs" />
         <Compile Include="Pages\About.fs" />
         <Compile Include="Pages\Login.fs" />
+        <Compile Include="Pages\NotFound.fs" />
         <Compile Include="Pages\Product\CatalogInfo.fs" />
         <Compile Include="Pages\Product\Details.fs" />
         <Compile Include="Pages\Product\Index.fs" />
