refactor: ♻️ extract Home/Data/Users, adjust Feat (-Home, +About)

--- a/src/Shopfoo.Home/Shopfoo.Home.fsproj
+++ b/src/Shopfoo.Home/Shopfoo.Home.fsproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <Content Include="paket.references" />
     <Compile Include="Data\Translations.fs" />
+    <Compile Include="Data\Users.fs" />
     <Compile Include="Api.fs" />
   </ItemGroup>
   <ItemGroup>
