feat: 👔 add Admin page to test the user access

--- a/src/Shopfoo.Client/Shopfoo.Client.fsproj
+++ b/src/Shopfoo.Client/Shopfoo.Client.fsproj
@@ -16,6 +16,7 @@
         <Compile Include="Components\User.fs" />
         <Compile Include="Components\Toast.fs" />
         <Compile Include="Pages\About.fs" />
+        <Compile Include="Pages\Admin.fs" />
         <Compile Include="Pages\Login.fs" />
         <Compile Include="Pages\NotFound.fs" />
         <Compile Include="Pages\Product\CatalogInfo.fs" />
