--- a/src/Shopfoo.Client/Shopfoo.Client.fsproj
+++ b/src/Shopfoo.Client/Shopfoo.Client.fsproj
@@ -19,6 +19,7 @@
         <Compile Include="Pages\Admin.fs" />
         <Compile Include="Pages\Login.fs" />
         <Compile Include="Pages\NotFound.fs" />
+        <Compile Include="Pages\Product\Actions.fs" />
         <Compile Include="Pages\Product\CatalogInfo.fs" />
         <Compile Include="Pages\Product\Details.fs" />
         <Compile Include="Pages\Product\Index.fs" />
