--- a/src/Shopfoo.Common/Shopfoo.Common.fsproj
+++ b/src/Shopfoo.Common/Shopfoo.Common.fsproj
@@ -4,6 +4,9 @@
     <TargetFramework>net9.0</TargetFramework>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+  </PropertyGroup>
   <ItemGroup>
     <Compile Include="Common.fs" />
     <Compile Include="Seq.fs" />
