--- a/src/Shopfoo.Domain.Types/Shopfoo.Domain.Types.fsproj
+++ b/src/Shopfoo.Domain.Types/Shopfoo.Domain.Types.fsproj
@@ -4,15 +4,18 @@
     <TargetFramework>net9.0</TargetFramework>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+  </PropertyGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Shopfoo.Common\Shopfoo.Common.fsproj" />
+  </ItemGroup>
   <ItemGroup>
     <Compile Include="Common.fs" />
     <Compile Include="Errors.fs" />
     <Compile Include="Products.fs" />
     <Compile Include="Security.fs" />
     <Compile Include="Translations.fs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Shopfoo.Common\Shopfoo.Common.fsproj" />
   </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
