--- a/package.json
+++ b/package.json
@@ -1,22 +1,24 @@
 {
-    "type": "module",
-    "private": true,
-    "scripts": {
-        "prestart": "dotnet tool restore",
-        "start": "dotnet fable watch ./src/Shopfoo.Client --outDir ./src/Shopfoo.Client/.fable-build --run vite",
-        "prebuild": "dotnet tool restore",
-        "build": "dotnet fable ./src/Shopfoo.Client --outDir ./src/Shopfoo.Client/.fable-build --run vite build"
-    },
-    "devDependencies": {
-        "@tailwindcss/vite": "^4.0.11",
-        "@vitejs/plugin-react": "^4.3.4",
-        "vite": "^6.2.1"
-    },
-    "dependencies": {
-        "daisyui": "^5.0.0",
-        "react": "^19.0.0",
-        "react-dom": "^19.0.0",
-        "tailwindcss": "^4.0.11",
-        "use-sync-external-store": "^1.4.0"
-    }
+  "type": "module",
+  "private": true,
+  "scripts": {
+    "prestart": "dotnet tool restore",
+    "start": "dotnet fable watch ./src/Shopfoo.Client --outDir ./src/Shopfoo.Client/.fable-build --run vite",
+    "prestart:fast": "dotnet tool restore",
+    "start:fast": "dotnet fable watch ./src/Shopfoo.Client --outDir ./src/Shopfoo.Client/.fable-build --noRestore --run vite",
+    "prebuild": "dotnet tool restore",
+    "build": "dotnet fable ./src/Shopfoo.Client --outDir ./src/Shopfoo.Client/.fable-build --run vite build"
+  },
+  "devDependencies": {
+    "@tailwindcss/vite": "^4.0.11",
+    "@vitejs/plugin-react": "^4.3.4",
+    "vite": "^6.2.1"
+  },
+  "dependencies": {
+    "daisyui": "^5.0.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "tailwindcss": "^4.0.11",
+    "use-sync-external-store": "^1.4.0"
+  }
 }
