--- a/src/Shopfoo.Product/Shopfoo.Product.fsproj
+++ b/src/Shopfoo.Product/Shopfoo.Product.fsproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Content Include="paket.references" />
+    <Compile Include="Data\Common.fs" />
     <Compile Include="Data\Products.fs" />
     <Compile Include="Api.fs" />
   </ItemGroup>
