--- a/src/Shopfoo.Product/Shopfoo.Product.fsproj
+++ b/src/Shopfoo.Product/Shopfoo.Product.fsproj
@@ -6,6 +6,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Content Include="paket.references" />
+    <Compile Include="Workflows\Types.fs" />
+    <Compile Include="Workflows\Instructions.fs" />
+    <Compile Include="Workflows\SaveProduct.fs" />
     <Compile Include="Data\Common.fs" />
     <Compile Include="Data\Products.fs" />
     <Compile Include="Api.fs" />
@@ -13,6 +16,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Shopfoo.Common\Shopfoo.Common.fsproj" />
     <ProjectReference Include="..\Shopfoo.Domain.Types\Shopfoo.Domain.Types.fsproj" />
+    <ProjectReference Include="..\Shopfoo.Effects\Shopfoo.Effects.fsproj" />
   </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
