--- a/src/Shopfoo.Product/Shopfoo.Product.fsproj
+++ b/src/Shopfoo.Product/Shopfoo.Product.fsproj
@@ -10,7 +10,10 @@
     <Compile Include="Workflows\Instructions.fs" />
     <Compile Include="Workflows\SaveProduct.fs" />
     <Compile Include="Data\Common.fs" />
+    <Compile Include="Data\Prices.fs" />
     <Compile Include="Data\Products.fs" />
+    <Compile Include="Data\Sales.fs" />
+    <Compile Include="Data\Warehouse.fs" />
     <Compile Include="Api.fs" />
   </ItemGroup>
   <ItemGroup>
