--- a/src/Shopfoo.Server/Shopfoo.Server.fsproj
+++ b/src/Shopfoo.Server/Shopfoo.Server.fsproj
@@ -22,7 +22,8 @@
     <Compile Include="Remoting\Home\GetTranslationsHandler.fs" />
     <Compile Include="Remoting\Home\HomeApiBuilder.fs" />
     <Compile Include="Remoting\Product\GetProductsHandler.fs" />
-    <Compile Include="Remoting\Product\GetProductDetailsHandler.fs" />
+    <Compile Include="Remoting\Product\GetProductHandler.fs" />
+    <Compile Include="Remoting\Product\GetPricesHandler.fs" />
     <Compile Include="Remoting\Product\SaveProductHandler.fs" />
     <Compile Include="Remoting\Product\ProductApiBuilder.fs" />
     <Compile Include="Remoting\RootApiBuilder.fs" />
