refactor: ♻️ extract Components/Actions from Pages/Product/Actions

--- a/src/Shopfoo.Client/Shopfoo.Client.fsproj
+++ b/src/Shopfoo.Client/Shopfoo.Client.fsproj
@@ -15,6 +15,7 @@
     <Compile Include="Remoting.fs" />
     <Compile Include="Routing.fs" />
     <Compile Include="UI.fs" />
+    <Compile Include="Components\Actions.fs" />
     <Compile Include="Components\Alert.fs" />
     <Compile Include="Components\AppNav.fs" />
     <Compile Include="Components\Lang.fs" />
