feat: ✨ increase/decrease prices, open/close drawer

--- a/src/Shopfoo.Client/Shopfoo.Client.fsproj
+++ b/src/Shopfoo.Client/Shopfoo.Client.fsproj
@@ -18,15 +18,19 @@
     <Compile Include="Components\Actions.fs" />
     <Compile Include="Components\Alert.fs" />
     <Compile Include="Components\AppNav.fs" />
+    <Compile Include="Components\Buttons.fs" />
     <Compile Include="Components\Lang.fs" />
     <Compile Include="Components\Theme.fs" />
     <Compile Include="Components\User.fs" />
     <Compile Include="Components\Toast.fs" />
+    <Compile Include="Pages\Shared.fs" />
     <Compile Include="Pages\About.fs" />
     <Compile Include="Pages\Admin.fs" />
     <Compile Include="Pages\Login.fs" />
     <Compile Include="Pages\NotFound.fs" />
+    <Compile Include="Pages\Product\Shared.fs" />
     <Compile Include="Pages\Product\Actions.fs" />
+    <Compile Include="Pages\Product\ModifyPrice.fs" />
     <Compile Include="Pages\Product\CatalogInfo.fs" />
     <Compile Include="Pages\Product\Details.fs" />
     <Compile Include="Pages\Product\Index.fs" />
