--- a/src/Shopfoo.Server/Shopfoo.Server.fsproj
+++ b/src/Shopfoo.Server/Shopfoo.Server.fsproj
@@ -25,6 +25,7 @@
     <Compile Include="Remoting\Product\GetProductHandler.fs" />
     <Compile Include="Remoting\Product\GetPricesHandler.fs" />
     <Compile Include="Remoting\Product\SaveProductHandler.fs" />
+    <Compile Include="Remoting\Product\SavePricesHandler.fs" />
     <Compile Include="Remoting\Product\ProductApiBuilder.fs" />
     <Compile Include="Remoting\RootApiBuilder.fs" />
     <Compile Include="WebApp.fs" />
