chore: 👷 update main_shopfoo.yml: add node, yarn; fix commands

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,3 +1,7 @@
+# YAML from the SAFEr template.
+# !! For Shopfoo, we use another workflow,
+#    located at the root of the git repo: .github/workflows/main_shopfoo.yml
+
 name: CI
 
 on:
