--- a/src/Shopfoo.Client/Shopfoo.Client.fsproj
+++ b/src/Shopfoo.Client/Shopfoo.Client.fsproj
@@ -11,6 +11,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="paket.references" />
+    <Compile Include="Package.fs" />
     <Compile Include="Server.fs" />
     <Compile Include="Remoting.fs" />
     <Compile Include="Routing.fs" />
@@ -39,6 +40,7 @@
     <Content Include="index.html" />
     <Content Include="..\..\package.json">
       <Link>package.json</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="..\..\yarn.lock">
       <Link>yarn.lock</Link>
