--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,11 +9,13 @@ on:
       dry-run:
         description: 'Run semantic-release in dry-run mode (no actual release)'
         required: false
-        default: 'false'
-        type: choice
-        options:
-          - 'true'
-          - 'false'
+        default: false
+        type: boolean
+      force_deploy:
+        description: 'Force deploy from the latest existing release'
+        required: false
+        default: false
+        type: boolean
 
 jobs:
   release:
@@ -50,11 +52,6 @@ jobs:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         with:
           dry_run: ${{ github.event.inputs.dry-run == 'true' }}
-          extra_plugins: |
-            @semantic-release/changelog
-            @semantic-release/git
-            @semantic-release/exec
-            conventional-changelog-conventionalcommits
 
       - name: Release output
         if: steps.semantic.outputs.new-release-published == 'true'
@@ -66,15 +63,29 @@ jobs:
     name: Build and Publish
     runs-on: ubuntu-latest
     needs: release
-    if: ${{ needs.release.outputs.new-release-published == 'true' }}
+    if: ${{ needs.release.outputs.new-release-published == 'true' || github.event.inputs.force_deploy == 'true' }}
     permissions:
       contents: read
 
     steps:
-      - name: Checkout code with updated package.json
+      - name: Get latest release tag
+        id: get_latest_release
+        if: ${{ github.event.inputs.force_deploy == 'true' }}
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const { data: release } = await github.rest.repos.getLatestRelease({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+            });
+            core.setOutput('tag_name', release.tag_name);
+            console.log(`Latest release tag is ${release.tag_name}`);
+
+      - name: Checkout code
         uses: actions/checkout@v4
         with:
-          ref: main
+          # Checkout the latest release tag if force_deploy is true, otherwise checkout main (which was updated by semantic-release)
+          ref: ${{ github.event.inputs.force_deploy == 'true' && steps.get_latest_release.outputs.tag_name || 'main' }}
 
       - name: Setup .NET 9
         uses: actions/setup-dotnet@v4
@@ -105,7 +116,7 @@ jobs:
     name: Deploy to Azure
     runs-on: ubuntu-latest
     needs: [release, build]
-    if: ${{ github.event_name == 'workflow_dispatch' && needs.release.outputs.new-release-published == 'true' }}
+    if: ${{ github.event_name == 'workflow_dispatch' && (needs.release.outputs.new-release-published == 'true' || github.event.inputs.force_deploy == 'true') }}
     permissions:
       id-token: write #This is required for requesting the JWT
       contents: read #This is required for actions/checkout
