--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "vite": "^6.2.1"
   },
   "dependencies": {
+    "@iconify-icons/fa6-solid": "^1.2.13",
+    "@iconify/react": "^6.0.2",
     "daisyui": "^5.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
