refactor(Remoting): ♻️ split Product into Catalog and Prices API

--- a/src/Shopfoo.Server/Shopfoo.Server.fsproj
+++ b/src/Shopfoo.Server/Shopfoo.Server.fsproj
@@ -18,15 +18,16 @@
     <Content Include="paket.references" />
     <Compile Include="Remoting\FeatApi.fs" />
     <Compile Include="Remoting\Security.fs" />
+    <Compile Include="Remoting\Catalog\GetProductsHandler.fs" />
+    <Compile Include="Remoting\Catalog\GetProductHandler.fs" />
+    <Compile Include="Remoting\Catalog\SaveProductHandler.fs" />
+    <Compile Include="Remoting\Catalog\CatalogApiBuilder.fs" />
     <Compile Include="Remoting\Home\IndexHandler.fs" />
     <Compile Include="Remoting\Home\GetTranslationsHandler.fs" />
     <Compile Include="Remoting\Home\HomeApiBuilder.fs" />
-    <Compile Include="Remoting\Product\GetProductsHandler.fs" />
-    <Compile Include="Remoting\Product\GetProductHandler.fs" />
-    <Compile Include="Remoting\Product\GetPricesHandler.fs" />
-    <Compile Include="Remoting\Product\SaveProductHandler.fs" />
-    <Compile Include="Remoting\Product\SavePricesHandler.fs" />
-    <Compile Include="Remoting\Product\ProductApiBuilder.fs" />
+    <Compile Include="Remoting\Prices\GetPricesHandler.fs" />
+    <Compile Include="Remoting\Prices\SavePricesHandler.fs" />
+    <Compile Include="Remoting\Prices\PricesApiBuilder.fs" />
     <Compile Include="Remoting\RootApiBuilder.fs" />
     <Compile Include="WebApp.fs" />
     <Compile Include="DependencyInjection.fs" />
