feat: ✨ implement "mark as sold-out" (missing checking stock = 0)

--- a/src/Shopfoo.Server/Shopfoo.Server.fsproj
+++ b/src/Shopfoo.Server/Shopfoo.Server.fsproj
@@ -27,6 +27,7 @@
     <Compile Include="Remoting\Home\HomeApiBuilder.fs" />
     <Compile Include="Remoting\Prices\GetPricesHandler.fs" />
     <Compile Include="Remoting\Prices\SavePricesHandler.fs" />
+    <Compile Include="Remoting\Prices\MarkAsSoldOutHandler.fs" />
     <Compile Include="Remoting\Prices\RemoveListPriceHandler.fs" />
     <Compile Include="Remoting\Prices\PricesApiBuilder.fs" />
     <Compile Include="Remoting\RootApiBuilder.fs" />
