--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,10 +51,10 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         with:
-          dry_run: ${{ github.event.inputs.dry-run == 'true' }}
+          dry_run: ${{ github.event.inputs.dry-run }}
 
       - name: Release output
-        if: steps.semantic.outputs.new-release-published == 'true'
+        if: steps.semantic.outputs.new-release-published
         run: |
           echo "New release published: ${{ steps.semantic.outputs.new-release-version }}"
           echo "Release notes: ${{ steps.semantic.outputs.new-release-notes }}"
@@ -63,14 +63,14 @@ jobs:
     name: Build and Publish
     runs-on: ubuntu-latest
     needs: release
-    if: ${{ needs.release.outputs.new-release-published == 'true' || github.event.inputs.force_deploy == 'true' }}
+    if: ${{ needs.release.outputs.new-release-published || github.event.inputs.force_deploy }}
     permissions:
       contents: read
 
     steps:
       - name: Get latest release tag
         id: get_latest_release
-        if: ${{ github.event.inputs.force_deploy == 'true' }}
+        if: ${{ github.event.inputs.force_deploy }}
         uses: actions/github-script@v7
         with:
           script: |
@@ -85,7 +85,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           # Checkout the latest release tag if force_deploy is true, otherwise checkout main (which was updated by semantic-release)
-          ref: ${{ github.event.inputs.force_deploy == 'true' && steps.get_latest_release.outputs.tag_name || 'main' }}
+          ref: ${{ github.event.inputs.force_deploy && steps.get_latest_release.outputs.tag_name || 'main' }}
 
       - name: Setup .NET 9
         uses: actions/setup-dotnet@v4
@@ -116,7 +116,7 @@ jobs:
     name: Deploy to Azure
     runs-on: ubuntu-latest
     needs: [release, build]
-    if: ${{ github.event_name == 'workflow_dispatch' && (needs.release.outputs.new-release-published == 'true' || github.event.inputs.force_deploy == 'true') }}
+    if: ${{ github.event_name == 'workflow_dispatch' && (needs.release.outputs.new-release-published || github.event.inputs.force_deploy) }}
     permissions:
       id-token: write #This is required for requesting the JWT
       contents: read #This is required for actions/checkout
