--- a/src/Shopfoo.Client/Shopfoo.Client.fsproj
+++ b/src/Shopfoo.Client/Shopfoo.Client.fsproj
@@ -21,6 +21,7 @@
     <Compile Include="Components\AppNav.fs" />
     <Compile Include="Components\Buttons.fs" />
     <Compile Include="Components\Icon.fs" />
+    <Compile Include="Components\Dialog.fs" />
     <Compile Include="Components\Lang.fs" />
     <Compile Include="Components\Theme.fs" />
     <Compile Include="Components\User.fs" />
