--- a/src/Shopfoo.Client/Shopfoo.Client.fsproj
+++ b/src/Shopfoo.Client/Shopfoo.Client.fsproj
@@ -33,6 +33,7 @@
     <Compile Include="Pages\NotFound.fs" />
     <Compile Include="Pages\Product\Shared.fs" />
     <Compile Include="Pages\Product\Actions.fs" />
+    <Compile Include="Pages\Product\AdjustStock.fs" />
     <Compile Include="Pages\Product\ManagePrice.fs" />
     <Compile Include="Pages\Product\CatalogInfo.fs" />
     <Compile Include="Pages\Product\Details.fs" />
