--- a/src/Shopfoo.Server/appsettings.json
+++ b/src/Shopfoo.Server/appsettings.json
@@ -1,6 +1,9 @@
 {
+  "FakeStore": {
+    "BaseUrl": "https://fakestoreapi.com"
+  },
   "OpenLibrary": {
-    "BaseUrl": "https://openlibrary.org"
+    "BaseUrl": "https://openlibrary.org",
+    "CoverBaseUrl": "https://covers.openlibrary.org/b"
   }
 }
-
