--- a/src/Shopfoo.Client/Shopfoo.Client.fsproj
+++ b/src/Shopfoo.Client/Shopfoo.Client.fsproj
@@ -22,6 +22,7 @@
     <Compile Include="Components\Buttons.fs" />
     <Compile Include="Components\Icon.fs" />
     <Compile Include="Components\Dialog.fs" />
+    <Compile Include="Components\FilterTab.fs" />
     <Compile Include="Components\Lang.fs" />
     <Compile Include="Components\Theme.fs" />
     <Compile Include="Components\User.fs" />
