--- a/src/Shopfoo.Client/Shopfoo.Client.fsproj
+++ b/src/Shopfoo.Client/Shopfoo.Client.fsproj
@@ -11,10 +11,10 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="paket.references" />
+    <Compile Include="Filters.fs" />
     <Compile Include="Package.fs" />
     <Compile Include="Server.fs" />
     <Compile Include="Remoting.fs" />
-    <Compile Include="Shared.fs" />
     <Compile Include="Routing.fs" />
     <Compile Include="UI.fs" />
     <Compile Include="Components\Actions.fs" />
@@ -39,8 +39,8 @@
     <Compile Include="Pages\Product\ManagePrice.fs" />
     <Compile Include="Pages\Product\CatalogInfo.fs" />
     <Compile Include="Pages\Product\Details.fs" />
-    <Compile Include="Pages\Product\Filters.fs" />
-    <Compile Include="Pages\Product\Table.fs" />
+    <Compile Include="Pages\Product\IndexFilterBar.fs" />
+    <Compile Include="Pages\Product\IndexTable.fs" />
     <Compile Include="Pages\Product\Index.fs" />
     <Compile Include="View.fs" />
     <Compile Include="App.fs" />
