refactor: ♻️ extract Components/Highlight.fs, fix Filters case insensitivity

--- a/src/Shopfoo.Client/Shopfoo.Client.fsproj
+++ b/src/Shopfoo.Client/Shopfoo.Client.fsproj
@@ -24,6 +24,7 @@
     <Compile Include="Components\Icon.fs" />
     <Compile Include="Components\Dialog.fs" />
     <Compile Include="Components\FilterTab.fs" />
+    <Compile Include="Components\Highlight.fs" />
     <Compile Include="Components\Lang.fs" />
     <Compile Include="Components\Theme.fs" />
     <Compile Include="Components\User.fs" />
