refactor: ♻️ extract Search.fs from Filters.fs

--- a/src/Shopfoo.Client/Shopfoo.Client.fsproj
+++ b/src/Shopfoo.Client/Shopfoo.Client.fsproj
@@ -11,6 +11,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="paket.references" />
+    <Compile Include="Search.fs" />
     <Compile Include="Filters.fs" />
     <Compile Include="Package.fs" />
     <Compile Include="Server.fs" />
