--- a/src/Shopfoo.Client/Shopfoo.Client.fsproj
+++ b/src/Shopfoo.Client/Shopfoo.Client.fsproj
@@ -23,9 +23,11 @@
     <Compile Include="Components\AppNav.fs" />
     <Compile Include="Components\Buttons.fs" />
     <Compile Include="Components\Icon.fs" />
+    <Compile Include="Components\Checkbox.fs" />
     <Compile Include="Components\Dialog.fs" />
     <Compile Include="Components\FilterTab.fs" />
     <Compile Include="Components\Highlight.fs" />
+    <Compile Include="Components\MultiSelect.fs" />
     <Compile Include="Components\Lang.fs" />
     <Compile Include="Components\Theme.fs" />
     <Compile Include="Components\User.fs" />
