feat: ✨ edit book authors (w/o creation)

--- a/src/Shopfoo.Server/Shopfoo.Server.fsproj
+++ b/src/Shopfoo.Server/Shopfoo.Server.fsproj
@@ -18,6 +18,7 @@
     <Content Include="paket.references" />
     <Compile Include="Remoting\FeatApi.fs" />
     <Compile Include="Remoting\Security.fs" />
+    <Compile Include="Remoting\Catalog\GetBooksDataHandler.fs" />
     <Compile Include="Remoting\Catalog\GetProductsHandler.fs" />
     <Compile Include="Remoting\Catalog\GetProductHandler.fs" />
     <Compile Include="Remoting\Catalog\SaveProductHandler.fs" />
