feat(CatalogInfo): ✨ search book authors on Open Library in the MultiSelect dropdown

--- a/src/Shopfoo.Server/Shopfoo.Server.fsproj
+++ b/src/Shopfoo.Server/Shopfoo.Server.fsproj
@@ -22,6 +22,7 @@
     <Compile Include="Remoting\Catalog\GetProductsHandler.fs" />
     <Compile Include="Remoting\Catalog\GetProductHandler.fs" />
     <Compile Include="Remoting\Catalog\SaveProductHandler.fs" />
+    <Compile Include="Remoting\Catalog\SearchAuthorsHandler.fs" />
     <Compile Include="Remoting\Catalog\CatalogApiBuilder.fs" />
     <Compile Include="Remoting\Home\IndexHandler.fs" />
     <Compile Include="Remoting\Home\GetTranslationsHandler.fs" />
