--- a/src/Shopfoo.Client/Shopfoo.Client.fsproj
+++ b/src/Shopfoo.Client/Shopfoo.Client.fsproj
@@ -39,14 +39,14 @@
     <Compile Include="Pages\Login.fs" />
     <Compile Include="Pages\NotFound.fs" />
     <Compile Include="Pages\Product\Shared.fs" />
-    <Compile Include="Pages\Product\Actions.fs" />
-    <Compile Include="Pages\Product\AdjustStock.fs" />
-    <Compile Include="Pages\Product\ManagePrice.fs" />
-    <Compile Include="Pages\Product\CatalogInfo.fs" />
-    <Compile Include="Pages\Product\Details.fs" />
-    <Compile Include="Pages\Product\IndexFilterBar.fs" />
-    <Compile Include="Pages\Product\IndexTable.fs" />
-    <Compile Include="Pages\Product\Index.fs" />
+    <Compile Include="Pages\Product\Details\Actions.fs" />
+    <Compile Include="Pages\Product\Details\AdjustStock.fs" />
+    <Compile Include="Pages\Product\Details\ManagePrice.fs" />
+    <Compile Include="Pages\Product\Details\CatalogInfo.fs" />
+    <Compile Include="Pages\Product\Details\Page.fs" />
+    <Compile Include="Pages\Product\Index\FilterBar.fs" />
+    <Compile Include="Pages\Product\Index\ProductsTable.fs" />
+    <Compile Include="Pages\Product\Index\Page.fs" />
     <Compile Include="View.fs" />
     <Compile Include="App.fs" />
     <Content Include="index.html" />
