--- a/src/Shopfoo.Product/Shopfoo.Product.fsproj
+++ b/src/Shopfoo.Product/Shopfoo.Product.fsproj
@@ -8,6 +8,7 @@
     <Content Include="paket.references" />
     <Compile Include="Workflows\Types.fs" />
     <Compile Include="Workflows\Instructions.fs" />
+    <Compile Include="Workflows\AddProduct.fs" />
     <Compile Include="Workflows\DetermineStock.fs" />
     <Compile Include="Workflows\MarkAsSoldOut.fs" />
     <Compile Include="Workflows\RemoveListPrice.fs" />
