--- a/src/Shopfoo.Product/Shopfoo.Product.fsproj
+++ b/src/Shopfoo.Product/Shopfoo.Product.fsproj
@@ -7,7 +7,9 @@
   <ItemGroup>
     <Content Include="paket.references" />
     <Compile Include="Model\Extensions.fs" />
+    <Compile Include="Model\Prices.fs" />
     <Compile Include="Model\Product.fs" />
+    <Compile Include="Model\Stock.fs" />
     <Compile Include="Workflows\Types.fs" />
     <Compile Include="Workflows\Instructions.fs" />
     <Compile Include="Workflows\AddProduct.fs" />
