--- a/src/Shopfoo.Product/Shopfoo.Product.fsproj
+++ b/src/Shopfoo.Product/Shopfoo.Product.fsproj
@@ -30,6 +30,7 @@
     <Compile Include="DependencyInjection.fs" />
   </ItemGroup>
   <ItemGroup>
+    <InternalsVisibleTo Include="Shopfoo.Product.Tests" />
     <ProjectReference Include="..\Shopfoo.Common\Shopfoo.Common.fsproj" />
     <ProjectReference Include="..\Shopfoo.Data\Shopfoo.Data.fsproj" />
     <ProjectReference Include="..\Shopfoo.Domain.Types\Shopfoo.Domain.Types.fsproj" />
