refactor(Product/Data): ♻️ extract Helpers, rename Common to Prelude

--- a/src/Shopfoo.Product/Shopfoo.Product.fsproj
+++ b/src/Shopfoo.Product/Shopfoo.Product.fsproj
@@ -18,7 +18,8 @@
     <Compile Include="Workflows\RemoveListPrice.fs" />
     <Compile Include="Workflows\SavePrices.fs" />
     <Compile Include="Workflows\SaveProduct.fs" />
-    <Compile Include="Data\Common.fs" />
+    <Compile Include="Data\Prelude.fs" />
+    <Compile Include="Data\Helpers.fs" />
     <Compile Include="Data\FakeStore.fs" />
     <Compile Include="Data\OpenLibrary.fs" />
     <Compile Include="Data\Books.fs" />
