fix(Product/Guard): 💄 properly set PropertyName and EntityName

--- a/src/Shopfoo.Product/Shopfoo.Product.fsproj
+++ b/src/Shopfoo.Product/Shopfoo.Product.fsproj
@@ -32,6 +32,7 @@
   </ItemGroup>
   <ItemGroup>
     <InternalsVisibleTo Include="Shopfoo.Product.Tests" />
+    <ProjectReference Include="..\Shopfoo.Common.Csharp\Shopfoo.Common.Csharp.csproj" />
     <ProjectReference Include="..\Shopfoo.Common\Shopfoo.Common.fsproj" />
     <ProjectReference Include="..\Shopfoo.Data\Shopfoo.Data.fsproj" />
     <ProjectReference Include="..\Shopfoo.Domain.Types\Shopfoo.Domain.Types.fsproj" />
